2008-02-11  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Bugfix: event used in place of x when
	xmlns is pubsub#event (EJAB-518)

2008-02-08  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Include the error condition in the
	presence status when kicking a participant due to an error
	stanza (EJAB-496)

	* src/ejabberd.cfg.example: Document options to SQL keep alive
	interval and pool size (EJAB-206)
	* doc/guide.tex: Likewise
	* doc/guide.html: Likewise

2008-02-06  Mickael Remond <mremond@process-one.net>

	* src/mod_pubsub/node_buddy.erl: Fixed typo
	* src/mod_pubsub/node_club.erl: Likewise
	* src/mod_pubsub/node_dispatch.erl: Likewise
	* src/mod_pubsub/node_pep.erl: Likewise
	* src/mod_pubsub/node_private.erl: Likewise
	* src/mod_pubsub/node_public.erl: Likewise
	* src/mod_pubsub/node.template: Likewise

2008-02-02  Mickael Remond <mremond@process-one.net>

	* src/mod_pubsub/nodetree_virtual.erl: Fixed error report at startup.

2008-01-30  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Removed the option served_hosts in mod_pubsub
	because it does not work correctly yet (EJAB-504)
	* doc/guide.html: Likewise

	* src/mod_echo.erl: Put in comments the call to the educational
	function do_client_version

2008-01-29  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: MUC kicks a participant if sends a
	private message with type=error (EJAB-496)

2008-01-25  Badlop  <badlop@process-one.net>

	* doc/introduction.tex: Updated list of languages
	* doc/release_notes_2.0.0.txt: Likewise

	* src/msgs/eo.msg: New Esperanto translation (thanks to Andreas
	van Cranenburgh)

	* src/msgs/no.msg: New Norwegian translation (thanks to Stian
	B. Barmen)

	* doc/Makefile: Fixed small problem with contributed_modules.tex

2008-01-25  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Setting boolean node configuration
	fixed (EJAB-509)